--- a/k8s-tutorial/configuration-file/mongo/config-map.yaml
+++ b/k8s-tutorial/configuration-file/mongo/config-map.yaml
@@ -2,5 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: mongodb-configmap
+  namespace: mongo-db
 data:
   database_url: mongodb-service # the service name
